[package]
name = "rt_vec"
version = "0.1.1"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2021"
description = "Runtime managed mutable borrowing from a vec."
repository = "https://github.com/azriel91/rt_vec"
documentation = "https://docs.rs/rt_vec/"
readme = "README.md"
keywords = ["map", "runtime", "borrow"]
license = "MIT OR Apache-2.0"

[dependencies]
rt_ref = "0.2.0"

[features]
unsafe_debug = ["rt_ref/unsafe_debug"]
